<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_radio_button"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:id="@+id/tv1"/>
    <RadioButton
        android:id="@+id/rb1"
        android:layout_below="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/radiobutton_1" />

    <RadioButton
        android:id="@+id/rb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radiobutton_2"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/rb1"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line"
        android:layout_below="@+id/rb2"
        android:background="@color/black"
        android:id="@+id/l1"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_button_inside_radiogroup"
        android:textSize="20sp"
        android:layout_below="@+id/l1"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/tv2"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv2"
        android:layout_centerHorizontal="true"
        android:id="@+id/rg1">
        <RadioButton
            android:id="@+id/rb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/rb4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

</RelativeLayout>